# dustwhisper

./: .gitignore  AGENTS.md  progress.md  pyproject.toml
docs/: performance-optimization-change-log.md
oracle_game/: __init__.py  active.py  demo_input.py  demo_render.py  demo_sizing.py  enginedemo.py  gpu.py  http_console.py  http_console_controller.py  http_console_entity.py  http_console_frame.py  http_console_inject.py  http_console_paging.py  http_console_readback.py  http_console_tables.py  page_store.py  paging.py  readback.py  readback_contract.py  rules.py  rules_materials.py  rules_reactions.py  types.py  world.py  world_backend_gating.py  world_bridge_serializers.py  world_capabilities.py  world_cell_mutators.py  world_command_application.py  world_command_queue.py  world_constants.py  world_controller_turn.py  world_debug_frame.py  world_demo_scene.py  world_engine_init.py  world_entity_sync.py  world_frame_io.py  world_frame_pipeline.py  world_geometry.py  world_input_coercion.py  (+13 more)
plan/: engine_plan.md  game_plan.md  step1.md  step2.md
scripts/: behavior_snapshot.py  benchmark_engine.py  verify_shaders.py
tests/: test_collapse_classification_support_axis_u8_fusion.py  test_collapse_component_invalid_generation.py  test_collapse_jfa_row_major_output.py  test_collapse_label_union_materialize_validation_fusion.py  test_collapse_materialize_filter_fusion.py  test_collapse_materialize_metadata_fusion.py  test_collapse_outcome_label_local_fusion.py  test_collapse_outcome_label_tile_union.py  test_collapse_persistent_dense_worklist.py  test_engine_core.py  (+63 more)
(+543 files in other folders)
